# LaserNesting

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/app/: MainWindow.cpp  MainWindow.h
src/domain/: Board.cpp  Board.h  NestingEngine.cpp  NestingEngine.h
src/storage/: BoardRepository.cpp  BoardRepository.h
ui/: CMakeLists.txt  LaserNestingQt.qmlproject  qds.cmake
ui/LaserNestingQt/: CMakeLists.txt  Constants.qml  qmldir
ui/LaserNestingQt/designer/: plugin.metainfo
ui/LaserNestingQtContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
